# static-page

./: .gitignore  README.md  TODO.md  build-pages.sh  deploy-local.sh  deploy-pages.sh  index.html  quickstart.sh
jekyll-site/: .gitignore  Gemfile  README.md  _config.local.yml  _config.pages.yml  _config.yml  assets_manifest.json  build-pages.sh  deploy-pages.sh  fallback_build.py  index.md  pyproject.toml  requirements.txt  事奉.md  事奉主者的人格.md  參加短期訓練.md  參加訓練.md  參加青職短期訓練.md  基督的身體.md  基督身體的實際.md  基督身體的構成與建造.md  影音專區.md  心志.md  性格.md  性格的重要.md  生命.md  生命_對神生機救恩完滿的經歷.md  相關資訊.md  真理.md  真理_聖經中關於真理的啟示.md  真理_被神聖真理的構成.md  職事.md  職事_職事的重要.md  訓練中心聯絡方式.md  訓練八方面.md  訓練沿革.md  訓練生活.md  訓練生活_簿本操練.md  訓練目的與目標.md  訓練負擔.md  (+4 more)
jekyll-site/_includes/: footer.html  header.html
jekyll-site/_layouts/: default.html
jekyll-site/_site/: build-local.sh
jekyll-site/_site/參加訓練/: index.html
jekyll-site/_site/參加青職短期訓練/: index.html
jekyll-site/_site/影音專區/: index.html
jekyll-site/_site/相關資訊/: index.html
jekyll-site/_site/訓練中心聯絡方式/: index.html
jekyll-site/_site/訓練八方面/: index.html
jekyll-site/_site/關於訓練/: index.html
jekyll-site/assets/css/: main.css
jekyll-site/assets/js/: main.js
jekyll-site/基督的身體/: 基督的身體_訓練的需要.md
jekyll-site/性格/: 性格_訓練的需要.md
jekyll-site/生命/: 生命_對於生命的經歷.md  生命_訓練的需要.md
jekyll-site/真理/: 真理_訓練的需要.md
jekyll-site/職事/: 職事_宇宙中獨一無二的新約職事.md
jekyll-site/訓練八方面/: index.md
jekyll-site/訓練八方面/事奉/: index.md
jekyll-site/訓練八方面/基督的身體/: index.md  基督的身體_訓練的需要.md  基督身體_基督的身體是召會的內在意義.md  基督身體_基督身體的實際.md  (+1 more)
jekyll-site/關於訓練/: index.md  訓練沿革.md  訓練目的與目標.md  課程介紹.md
(+171 files in other folders)
