[project]
name = "jekyll-site"
version = "0.1.0"
description = ""
authors = [
    {name = "william880808",email = "aah22550708@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "markdownify (==0.9.2)",
    "beautifulsoup4 (==4.12.2)",
    "lxml (==4.9.3)",
    "requests (==2.31.0)",
    "markdown (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
